     change, operations that intend to turn off or restart the load, or can
     do that by side effect (e.g. calibration if batteries are old or dead),
     would explicitly `upslogx(LOG_CRIT,...)` by default before commencing.
     [#2957]
   * Fixed a couple of ancient memory leaks: one "shared" during driver
     program initialization, and one specific to `dummy-ups` wind-down. [#2972]

 - `dummy-ups` driver updates:
   * A new instruction `ALARM` was added for the `Dummy Mode` operation
     of the driver, enabling simulation of UPS alarm states more closely
     in line with modern, real-world UPS driver implementations. This
     follows the updated principle of keeping alarm states decoupled from
     the `ups.status` variable, with alarms now raised via common alarm
     functions rather than direct manipulation. [issue #2928, PR #2936]

 - `clone`, `clone-outlet`, `nhs_ser` driver and `nutdrv_qx_ablerex`
   subdriver updates:
   * Refactored to follow modern handling of status and alarm conditions,
     aligning with current driver design practices. This includes fixing
     copy-paste related issues in alarm reporting and removing some alarm
     messages that should instead be reflected as status flags. [#2936]

 - `nutdrv_qx` driver updates:
   * Introduced `innovart33` protocol support for Ippon Innova RT 3/3 topology
     UPSes. [#2938]

 - `usbhid-ups` driver updates:
   * The `cps-hid` subdriver's existing mechanism for fixing broken report
     descriptors was extended to cover a newly reported case of nominal UPS
     power being incorrectly reported due to an unrealistically low maximum
     threshold, as seen with a EC850LCD device. [issue #2917, PR #2919]
   * Added APC BVKxxxM2 to list of devices where `lbrb_log_delay_sec=N` may be
     necessary to address spurious LOWBATT and REPLACEBATT events. [#2942]

 - New NUT drivers:
   * Introduced a `ve-direct` driver for Victron Energy UPS/solar panels