@@ -3269,7 +3269,7 @@ static void help(const char *arg_progname)
 
 	nut_report_config_flags();
 
-	printf("\n%s", suggest_doc_links(arg_progname, "upsmon.conf"));
+	printf("\n%s", suggest_doc_links_CMD_SYS(arg_progname, "upsmon.conf"));
 
 	exit(EXIT_SUCCESS);
 }
