@@ -419,9 +419,11 @@ common-nut_version.c
 It is used from a number of other methods, such as `print_banner_once()`,
   `nut_report_config_flags()`, and so ends up in version reports of programs
   via their `help()`/`usage()` methods.
-* Method `suggest_doc_links()` prepares a uniform bit of text for driver and
-  tool programs to report in their `help()`/`usage()` methods, to refer to
-  their manual page under the `NUT_WEBSITE_BASE`.
+* Methods `suggest_doc_links_CMD_SYS()` and `suggest_doc_links_CMD_USR()` help
+  by preparing a uniform bit of text for driver and tool programs to report in
+  their `help()`/`usage()` methods, to refer to their locally delivered manual
+  page (if documentation was built) and an on-line copy under the
+  `NUT_WEBSITE_BASE`.
 
 Man pages
 ~~~~~~~~~
