@@ -227,7 +227,8 @@ const char *describe_NUT_VERSION_once(void);
  * Optional "progconf" allows to suggest config file(s) to study as well.
  * NOTE: the string in buffer starts with text and ends with one EOL char.
  */
-const char *suggest_doc_links(const char *progname, const char *progconf);
+const char *suggest_doc_links_CMD_SYS(const char *progname, const char *progconf);
+const char *suggest_doc_links_CMD_USR(const char *progname, const char *progconf);
 
 /* Based on NUT_QUIET_INIT_BANNER envvar (present and empty or "true")
  * hide the NUT tool name+version banners; show them by default */
