@@ -139,7 +139,7 @@ int main(int argc, char **argv)
 		fprintf(stderr, "       %s apcsmart-com1\n",
 			argv[0]);
 
-		fprintf(stderr, "\n%s", suggest_doc_links(prog, NULL));
+		fprintf(stderr, "\n%s", suggest_doc_links_CMD_SYS(prog, NULL));
 
 		exit(EXIT_SUCCESS);
 	}
